# stream-signer

./: .gitignore  Cargo.toml  README.md  spec.md
.github/workflows/: cargo.yaml  checks.yaml  docs.yaml
.github/workflows/setup/: action.yaml
crates/common-gui/: Cargo.toml
crates/common-gui/src/: debug.rs  lib.rs  showif.rs  state.rs  video.rs
crates/common-gui/src/video/: bar.rs  feed.rs  frame.rs  mod.rs  overlay.rs  play_btn.rs  player.rs  widget.rs
crates/core/: Cargo.toml
crates/core/benches/: signing_and_verifying.rs
crates/core/src/: credential.rs  lib.rs  sign_file.rs
crates/core/src/audio/: buffer.rs  gst.rs  mod.rs
crates/core/src/file/: error.rs  mod.rs  signs.rs  time.rs
crates/core/src/spec/: constants.rs  coord.rs  credential.rs  mod.rs  presentation.rs  signature.rs
crates/core/src/tests/: client.rs  did.rs  identity.rs  issuer.rs  mod.rs
crates/core/src/utils/: credential.rs  delayed_stream.rs  mod.rs  time_range.rs
crates/core/src/video/: builder.rs  delayed_stream.rs  error.rs  frame_info.rs  frame_iter.rs  framerate.rs  gst.rs  iter.rs  manager.rs  mod.rs  pipeline.rs  sample_iter.rs  sign.rs  state.rs  utils.rs  verify.rs
crates/core/src/video/audio/: buffer.rs  frame.rs  mod.rs  slice.rs
crates/core/src/video/frame/: gst.rs  image.rs  info.rs  mod.rs  rate.rs  state.rs  wrappers.rs
crates/core/src/video/pipeline/: builder.rs  init.rs  mod.rs  sign_pipeline.rs  wrappers.rs
crates/core/src/video/sign/: control.rs  error.rs  mod.rs  signer.rs
crates/core/src/video/sign/control/: functions.rs  interval.rs  mod.rs  multi.rs  single.rs  traits.rs
crates/core/tests/: audio.rs  basic.rs  builder_options.rs  constants.rs  controller_options.rs  embedding.rs  errors.rs  invalid_data.rs  spec.rs  test_client.json  utils.rs
crates/core/tests/ssrts/: invalid.ssrt  invalid_pres.ssrt  invalid_struct.ssrt  test_client.json  undefined_id.ssrt  undefined_ids.ssrt  valid.ssrt
crates/core/tests/videos/: README.md
crates/signer/: Cargo.toml
crates/signer-gui/: Cargo.toml
crates/signer-gui/src/: app.rs  controller.rs  debug.rs  main.rs  menu.rs  state.rs  video.rs
crates/testlibs/: Cargo.toml
crates/testlibs/src/: client.rs  did.rs  identity.rs  issuer.rs  lib.rs
crates/verifier-gui/: Cargo.toml
crates/verifier-gui/src/: app.rs  main.rs  menu.rs  state.rs  video.rs
tests/: videos
