[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

# Signing and verifying takes about 30 seconds in debug mode, therefore we need to use release
[profile.bench]
inherits = "release"
