[package]
name = "testlibs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97" }
identity_iota = { version = "1.5.0", features = ["iota-client", "client", "memstore", "resolver", "send-sync-storage"] }
iota-sdk = { version = "1.1.5" }
rand = { version = "0.9.0", features = ["thread_rng"] }
serde = "1.0.219"
tokio = "1.43.0"
