[package]
name = "verifier-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
druid = "0.8.3"
identity_iota = "1.5.0"
instant = "0.1.13"
futures = "0.3.31"
serde = "1.0.218"
serde_json = "1.0.140"
stream-signer = { path = "../core", default-features = false, features = ["signing", "testlibs"] }
